@startuml class_diagram
' o = agregate

Pesanan "many" -- "1" Users
Balance "many" -- "1" Users
Topup "many" -- "1" Users
Pesanan "many" -- "1" Tiket
Jadwal "many" -- "1" Bis
Jadwal "many" -- "1" Rute
Tiket "many" -- "1" Jadwal
Topup "many" -- "1" Balance

class Users {
    + user_id
    + password
    + nama_depan
    + nama_belakang
    + nomor_hp
    + role
    + join_at

    + login()
    + register()
}

class Pesanan {
    + pesanan_id
    + tiket_id
    + user_id
    + jumlah
    + waktu_pesanan

    + lihatPesananProfile()
    + beliTiket()
    + batalkanTiket()
    + lihatPesananById()
}

class Jadwal {
    + jadwal_id
    + rute_id
    + bis_id
    + jam_berangkat
    + status

    + lihatJadwal()
    + tambahJadwal()
    + ubahJadwal()
}

class Tiket {
    + tiket_id
    + jadwal_id
    + harga
    + stok
    + status

    + showTiketDetail()
    + lihatTiket()
    + showTiketPublic()
    + tambahTiket()
    + updateStatus()
    + updateTiket()
}

class Bis {
    + bis_id
    + merk
    + kapasitas
    + plat_nomor

    + tambahBis()
    + lihatBis()
    + ubahBis()
    + hapusBis()
    + lihatMerk()
}

class Rute {
    + rute_id
    + tujuan
    + titik_penjemputan
    + titik_penurunan

    + lihatRute()
    + ubahRute()
    + tambahRute()
    + hapusRute()
}

class Balance {
    + balance_id
    + balance

    + getBalance()
}

class Topup {
    + topup_id
    + amount
    + status
    + waktu_topup

    + lihatDaftar()
    + lihatTopup()
    + tolakTopup()
    + tambahTopup()
}

@enduml
